--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +14,15 @@
 <body>
   <div class="container">
     <div class="function-box">
-      <img class="logo" src="images\logo.svg">
+      <img class="logo" src="logo.svg">
       <div class="icon">
-        <img src="images\icon-document.svg">
+        <img src="icon-document.svg">
       </div>
       <div class="folder">
-        <img src="images\icon-folder.svg">
+        <img src="icon-folder.svg">
       </div>
       <div class="upload">
-        <img src="images\icon-upload.svg">
+        <img src="icon-upload.svg">
       </div>
     </div>
 
