--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <body>
   <div class="container">
     <div class="function-box">
-      <img class="logo" src="logo.svg">
+      <img class="images/logo" src="logo.svg">
       <div class="icon">
-        <img src="icon-document.svg">
+        <img src="images/icon-document.svg">
       </div>
       <div class="folder">
-        <img src="icon-folder.svg">
+        <img src="images/icon-folder.svg">
       </div>
       <div class="upload">
-        <img src="icon-upload.svg">
+        <img src="images/icon-upload.svg">
       </div>
     </div>
 
