image src rerouting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="function-box">
-      <img class="images/logo" src="logo.svg">
+      <img class="logo" src="images/logo.svg">
       <div class="icon">
         <img src="images/icon-document.svg">
       </div>
